# wFiIS-Zadania

./: .gitignore  README.md  schemat_hornera.scala
C Labs/: zadanie1.c  zadanie2.c  zadanie3.c
C Labs/2/: zad3.c  zad4.c
C Labs/3/: zad1.c  zad2.c  zad3.c
C Labs/4/: zad1.c  zad2_wer2.c  zad3.c  zad3_wer2.c
C Labs/5/: z1.c
C Labs/6/: z1.c
C_1_Semestr/1/: tryhard.c
C_1_Semestr/2/: zad1.c  zad2.c
C_1_Semestr/4/: zad2.c
C_1_Semestr/5/: z2.c
Horner/: build.sbt
MN/mnMaciejM-1/: main  main.c  out.txt
MN/mnMaciejM-10/: T0.eps  T1.eps  T2.eps  gnuplot_10.sh  main.c  w0.eps
MN/mnMaciejM-11/: FFT_k10.eps  FFT_k12.eps  FFT_k8.eps  gnuplot_11.sh  main.c
MN/mnMaciejM-2/: main.c  out.txt
MN/mnMaciejM-3/: main.c  out.txt  out2.txt  out3.txt
MN/mnMaciejM-4/: gnuplot_4.sh  main.c
MN/mnMaciejM-5/: main.c
MN/mnMaciejM-6/: main.c
MN/mnMaciejM-7/: gnuplot_7.sh  inter_n10.eps  inter_n10_Czebyszew.eps  inter_n15.eps  inter_n15_Czebyszew.eps  inter_n20.eps  inter_n20_Czebyszew.eps  inter_n5.eps  inter_n5_Czebyszew.eps  main.py
MN/mnMaciejM-8/: f1_n21.eps  f1_n5.eps  f1_n8.eps  f2_n21.eps  f2_n5.eps  f2_n8.eps  main.c  pochodne.eps
MN/mnMaciejM-9/: Gram.eps  approx_10.eps  approx_30.eps  approx_50.eps  f.c  main.c
PI/Min/: build.sbt
PO1/Lab1/: CMakeLists.txt  fraction.cpp  fraction.h  main.cpp
PO1/Lab10/: Num.h  main.cpp
PO1/Lab2/: CMakeLists.txt  ComplexNumber.cpp  main.cpp  (+1 more)
PPO/Lab2/: CMakeLists.txt  clearAll.sh  cmake_into.txt  doxygen_intro.txt  funkcje.cpp  funkcje.h  main.cpp
Scala/: Flange.scala  Scrambler.scala
pseudokod/: z5.scala
(+293 files in other folders)
